--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ code {
   height: 480px;
   box-shadow: 0px 0px 3px 1px #ccc;
   object-fit: cover; 
-  object-position: 0% 100%;
+  /* object-position: 30% 100%; */
 }
 
 .o-card-info {
